bug(landing-page-containers):align containers correctly [Finishes #167401476]

--- a/UI/assets/css/landing-page.css
+++ b/UI/assets/css/landing-page.css
@@ -73,10 +73,12 @@ footer {
     width: 50%;
     text-align: center;
     font-size: 31px;
+    margin-left: 15px;
 }
 .container4:hover {
     background-color: rgb(233, 230, 230);
     box-shadow: 4px 4px 4px 4px rgb(175, 174, 174);
+    
 }
 .form-group select{
     width: 60%;
@@ -85,7 +87,7 @@ footer {
  .booking {
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-right: 80px;
+    margin-right: 50px;
     text-align: center;
     width: 40%;
     float: right;
